WIP: Add class for data generation

--- a/train-test.ipynb
+++ b/train-test.ipynb
@@ -398,44 +398,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DatagGenerator(tf.keras.utils.Sequence):\n",
-    "    def __init__(self, batch_size, image_dataset, shuffle=False):\n",
-    "        self.batch_size = batch_size\n",
-    "        self.image_dataset = image_dataset\n",
-    "        self.shuffle = shuffle\n",
-    "        self.on_epoch_end()\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return tf.data.experimental.cardinality(self.image_dataset)\n",
-    "    \n",
-    "    def __getitem__(self, index):\n",
-    "        for image_batch in self.image_dataset.skip(index).take(1):\n",
-    "            l, ab = preprocess_images_batch(image_batch)\n",
-    "        \n",
-    "        return [l, np.zeros((self.batch_size, IMAGE_SIZE[0], IMAGE_SIZE[1], 3))], ab\n",
-    "    \n",
-    "    def on_epoch_end(self):\n",
-    "        if self.shuffle == True:\n",
-    "            self.image_dataset = self.image_dataset.shuffle(self.image_dataset.cardinality())"
+    "from utils.data_generator import DataGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_generator = DatagGenerator(batch_size=BATCH_SIZE, image_dataset=train_dataset, shuffle=True)\n",
-    "validation_generator = DatagGenerator(batch_size=BATCH_SIZE, image_dataset=validation_dataset)"
+    "train_generator = DatagGenerator(batch_size=BATCH_SIZE, image_size=IMAGE_SIZE, image_dataset=train_dataset, shuffle=True)\n",
+    "validation_generator = DatagGenerator(batch_size=BATCH_SIZE, image_size=IMAGE_SIZE, image_dataset=validation_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -443,11 +425,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "1/1 [==============================] - 2s 2s/step - loss: -30001.7656 - accuracy: 0.9828 - val_loss: -30015.1562 - val_accuracy: 0.9828\n",
+      "1/1 [==============================] - 2s 2s/step - loss: -30041.9180 - accuracy: 0.9828 - val_loss: -30055.2871 - val_accuracy: 0.9828\n",
       "Epoch 2/3\n",
-      "1/1 [==============================] - 2s 2s/step - loss: -30015.1562 - accuracy: 0.9828 - val_loss: -30028.5371 - val_accuracy: 0.9828\n",
+      "1/1 [==============================] - 2s 2s/step - loss: -30055.2871 - accuracy: 0.9828 - val_loss: -30068.6562 - val_accuracy: 0.9828\n",
       "Epoch 3/3\n",
-      "1/1 [==============================] - 2s 2s/step - loss: -30028.5371 - accuracy: 0.9828 - val_loss: -30041.9180 - val_accuracy: 0.9828\n"
+      "1/1 [==============================] - 2s 2s/step - loss: -30068.6562 - accuracy: 0.9828 - val_loss: -30082.0078 - val_accuracy: 0.9828\n"
      ]
     }
    ],
